Reduce h1 title font-size to prevent overflow

--- a/docs/components/MdxProvider/MdxTitle/MdxTitle.module.css
+++ b/docs/components/MdxProvider/MdxTitle/MdxTitle.module.css
@@ -15,7 +15,7 @@
 
   &[data-h1] {
     font-weight: 900;
-    font-size: rem(44px);
+    font-size: rem(40px);
     margin-top: 0;
   }
 }
